# edit-patterns

./: .gitignore  LICENSE  Main.hs  README.md  edit-patterns.cabal  modexp.m  version-patterns.cabal
cbits/: modexp.c  mult.c
doc/: .gitignore  Makefile  beamercolorthemeGalois.sty  beamerfontthemeGalois.sty  beamerinnerthemeGalois.sty  beamerouterthemeGalois.sty  beamerthemeGalois.sty  build-slides.sh  conclusion.tex  doceng2013.tex  experiment.tex  intro.tex  methods.tex  sigproc.bib  slide-template.t  slides-notes.txt  slides.md  slides.tex
doc/figures/: workflow.graffle
src/: CATerms.hs  JavaATerms.hs  WeaveUtils.hs
