name:                edit-patterns
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Jason Dagit
maintainer:          dagit@galois.com
copyright:           Galois, Inc 2013
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable edit-patterns
  main-is:             Main.hs
  other-modules:       JavaATerms
                     , CATerms
                     , WeaveUtils
  build-depends:       base >= 3 && < 5
                     , containers
                     , mtl
                     , transformers
                     , shelly
                     , text
                     , system-filepath
                     , system-fileio
                     , aterm
                     , aterm-utils >= 0.2.0.0
                     , tree-utils
                     , zip-archive
                     , bytestring
                     , language-java
                     , language-c
                     , ghc-prim
                     , csv
                     , vector
  hs-source-dirs:      .
                     , src
  c-sources: cbits/mult.c

  ghc-options: -Wall -O2
  ghc-prof-options: -fprof-auto -prof -rtsopts
